# AutoDiskCopier

./: LICENSE.txt  README.md  应用源代码清单.docx  用户手册.docx
AutoDiskCopier_pre/AutoDiskCopier_pre/: AutoDiskCopier_pre.aps  AutoDiskCopier_pre.cpp
AutoDiskCopier_pre/Debug/: AutoDiskCopier_pre.ilk
AutoDiskCopier_v1/: UCopy存档说明.txt
AutoDiskCopier_v1/UCopy/: UCopy.sln
AutoDiskCopier_v1/UCopy/UCopy/: Def.h  Func.cpp  UCopy.cpp  UCopy.rc  UCopy.vcxproj  UCopy.vcxproj.filters  resource.h
AutoDiskCopier_v2/: 应用源代码清单.chm  用户手册.chm
AutoDiskCopier_v2/AutoDiskCopier_pre/: AutoDiskCopier_pre.sln
AutoDiskCopier_v2/AutoDiskCopier_pre/AutoDiskCopier_pre/: AutoDiskCopier_pre.h  AutoDiskCopier_pre.rc  AutoDiskCopier_pre.vcxproj  AutoDiskCopier_pre.vcxproj.filters  CmnDlg.h  MD5.h  NotifyIcon.h  resource.h
AutoDiskCopier_v2/AutoDiskCopier_pre/Release/: AutoDiskCopier_pre.iobj  AutoDiskCopier_pre.ipdb
AutoDiskCopier_v3/: .gitignore  CMakeLists.txt  build.bat  clean.bat  config.bat
AutoDiskCopier_v3/src/: AutoDiskCopier.cpp  AutoDiskCopier.h  AutoDiskCopier.rc  CmnDlg.h  MD5.h  NotifyIcon.h  resource.h
